# linear_layer_handcraft

./: .gitignore  README.md  main.py
source/: CMakeLists.txt  build.sh
source/ops/include/: gemm.cuh
source/ops/kernel/: cudabind.cpp  gemm_cuda.cu
source/src/: gemm.cpp  pybind.cpp
